--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -12,7 +12,7 @@
 % Video GreenPeace
 % Animacao climat France 
 % http://climat.meteofrance.com/chgt_climat/rechauffement/amiens
- 
+
 
 
 \documentclass[a4paper,11pt]{article}
@@ -102,6 +102,8 @@ provoquer par l'homme. On peut voir que le dioxyde de carbone a une augmentation
 considérable à cause de les actions anthropiques. 
 
 \begin{table}[H]
+  \caption{Comparaison entre la  concentration des gaz à effet  de serre entre les
+    périodes préindustrielle e actuel }
   \begin{tabular}{ |c | c| p{3cm} | p{2.5cm} | p{2.5cm}  |}
     \hline
     Gaz à effet de serre & Formule & Concentration Préindustrielle & Concentration
@@ -129,6 +131,7 @@ Par définition,  le PRG du  \ce{CO2} est  toujours identique à  1 et les  autr
 basées sur une comparaison avec le \ce{CO2}.
 
 \begin{table}[H]
+  \caption{Comparaison entre les effets des différents gaz de serre}
   \begin{center}
     \begin{tabular}{ |c | c|}
       \hline
@@ -228,7 +231,7 @@ dans le cas plus optimiste $3,0^{\circ}C$.
     \includegraphics[scale=0.6]{fig/franceMoyenne}
     \par\end{centering}
   \caption{Augmentation de la température moyenne annuelle en France
-métropolitaine sur la période 1901-2000}
+    métropolitaine sur la période 1901-2000}
   \label{fig:franceMoyenne}
 \end{figure}
 
@@ -239,22 +242,100 @@ de cinquante jours avec de grande températures.
 
 \begin{figure}[H]
   \begin{centering}
-    \includegraphics[scale=0.6]{fig/35france}
+    \includegraphics[scale=0.5]{fig/35france}
     \par\end{centering}
-  \caption{Nombre de jours par an avec températures maximales supérieures à 35°C en France : dernière décennie du 20 ème siècle comparée à la dernière décennie du 21ème siècle, selon les 3 scénarios A2, A1B et B1 (copyright Météo-France 2007)}
+  \caption{Nombre de jours par an avec températures maximales supérieures à 35°C
+    en  France :  dernière décennie  du  20 ème  siècle comparée  à la  dernière
+    décennie du  21ème siècle, selon  les 3 scénarios  A2, A1B et  B1 (copyright
+    Météo-France 2007)}
+
   \label{fig:35france}
 \end{figure}
 
 
-Ressource en eau
+\subsubsection*{Ressource en eau}
 Si l’on considère une stabilité de la demande, un déficit de 2 milliards de m3
-par an pour la satisfaction des besoins actuels de l’industrie, l’agriculture (irrigation) et l’alimentation en eau potable serait observé à l’horizon 2050
+par an  pour la satisfaction  des besoins actuels de  l’industrie, l’agriculture
+(irrigation) et l’alimentation en eau potable serait observé à l’horizon 2050.
 
-Impact sur la couverture neigeuse
-Comme la couverture neigeuse des massifs montagneux français sont liées a bas températures, le réchauffement climatique tend à diminuer la durée de l’enneigement et l’épaisseur du manteau neigeux. De même façon il existera  des modifications des régimes hydrologiques des rivières de montagne, de la végétation à haute altitude et de l’enneigement des stations de sport d’hiver. 
+Les zones les plus vulnérables seraient les zones déjà concernées par des déficits structurels. Le coût
+du déficit atteindrait 5 à 10 milliards d’euros si les volumes d’eau devaient être
+complètement compensés et des traitements complémentaires mis en œuvre.
 
-Impact sur l’agriculture
-Dans une côté, le sud de la France  devraient apparaître des effets négatifs, qui peuvent prendre une grande ampleur dans le cas de sécheresses répétées et persistante. Dans autre côté, des effets plutôt positifs sont à attendre dans le nord parce que les mauvaises herbes seront les plus impactées.
+\subsubsection*{Le retrait-gonflement des sols argileux (RGA)}
+
+Les sécheresses au été sont responsables de la majorité des sinistres liés au RGA.
+En prenant compté  que les sécheresses seront intensifiés,  le coût moyen annuel
+des dommages  passera d’environ 220  millions d’euros (référence sur  la période
+1989-2003) à un coût entre 700 et 1 3000 millions d’euros en 2100.
+
+\subsubsection*{Les inondations}
+Avec  l'augmentation des  précipitations extrêmes  les  inondations augmenteront
+aussi, donc quelques scénarios ont été créer pour quelques bassins versants.
+Le tableau ci-dessous démontre que les  évolutions de dommages sont grand sur la
+Meuse et  l'Orb, cela veut dire  que la probabilité  d'inondation ira augmenter
+considérablement. 
+
+
+\begin{table}[H]
+  \begin{center}
+    \caption{Variation du début de pointe retenues sur les bassins versants d’illustration}
+    \begin{tabular}{|c|c|c|c|}
+      \hline
+      & Hypothèse basse &Hypothèse moyenne &Hypothèse haute\\
+      \hline
+      Loire & +5 \% & + 10 \% & +20\%\\
+      Seine & - 10 \% &+ 10 \% & - \\ 
+      Rhône & 5\% & 10 \% & +20\%\\
+      Meuse & 10\%& 10\%& +10\%\\
+      Orb &10\% & 25\% & +50\% \\
+      \hline
+    \end{tabular}
+  \end{center}
+\end{table}
+
+\subsubsection*{Impact sur la couverture neigeuse}
+Comme la  couverture neigeuse des massifs  montagneux français sont  liées a bas
+températures,  le   réchauffement  climatique  tend  à  diminuer   la  durée  de
+l’enneigement et l’épaisseur  du manteau neigeux. De même  façon il existera des
+modifications  des  régimes  hydrologiques  des  rivières  de  montagne,  de  la
+végétation à haute altitude et de l’enneigement des stations de sport d’hiver. 
+
+
+\subsubsection*{Impact sur l’agriculture}
+Dans une côté, le sud de la France devraient apparaître des effets négatifs, qui
+peuvent  prendre une  grande  ampleur dans  le  cas de  sécheresses répétées  et
+persistante. Dans autre côté, des effets plutôt positifs sont à attendre dans le
+nord parce que les mauvaises herbes seront les plus impactées.
+
+Par exemple, le blé aura une augmentation des rendements, pendant que le maïs en 2100
+à une perte pouvant atteindre près de 113 millions d’euros par an.
+
+Autre  grand  impact  sur  l'agriculture  sera l'augmentation  des  périodes  de
+canicule, par exemple,  un canicule comme l'un de  2003 pourrait représenter, en
+2100,  un coût  allant jusqu’à  plus de  300 millions  d’euros par  an  pour une
+culture comme le blé.  
+
+Pour la viticulture, il ne sera pas
+possible dans ces conditions de produire autant de vins de haute qualité qu’au-
+jourd’hui. En plus, Il existera des pertes de rendement considérables (jusque - 26 \%).
+
+\subsubsection*{Impact sur la santé }
+La canicule de 2003 en France a provoqué une surmortalité observée de 14 800
+personnes entre le 1er et le 20 août.  Et est estimé que la valeur perdue par la
+societé française est environ 500 millions d’euros.
+Comme un mécanisme d'alerte aux ondes de chaleur, le Plan national canicule
+(PNC) a été mis en place.Le coût  pour la préparation du système plus le coût de
+fonctionnement est d'environ 740 000 euros. 
+
+\subsubsection*{Impact énergétiques}
+La consommation énergétique  en régions de climat frais  ira, peut-être diminuer
+en raison  d'une économie  en chauffage, cependant  augmenterait dans  les zones
+méridionales en raison d'une forte dépense en climatisation.
+
+Les baisses de précipitations modélisées dans les principaux bassins versants
+aménagés en unités hydro-électriques laissent envisager une baisse moyenne de
+l’ordre de 15 \% du potentiel productible.
 
 
 \section{La position de la société française}
