--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -340,9 +340,65 @@ l’ordre de 15 \% du potentiel productible.
 
 \section{La position de la société française}
 \subsection{Les écologistes}
+
+Les ONG écologistes estiment toujours que les politiques européennes ne vont pas
+assez loin,  cela veut dire que  les efforts font pour  ramener le réchauffement
+climatique à  un niveau  moins intense sont  insuffisantes. Ainsi, les  ONG (CAN
+Europe, Friends of Earth, Greenpeace et le WWF) ont exigé une 
+révision  en   profondeur  du  PECC   (Programme  européen  sur   le  changement
+climatique), et l'établissement d'objectifs et de politiques plus ambitieux. 
+
+À cause de cette faible ambition, les ONG supportent que la révolution énergétique
+européenne est une "rêve encore lointain" et que les propositions
+dans le domaine de l'énergie "ne  sont pas convaincantes et pourraient avoir des
+conséquences  négatives,  notamment en  ce  qui  concerne  les biocarburants  et
+l'énergie nucléaire."
+
+
+
 \subsection{La société en général} 
+
+Selon des sondages environ 84\% des Français croient à la réalité du réchauffement
+climatique et  parmi les  personnes qui croient,  96\% disent que  les activités
+humaines ont intensifié le phénomène.
+Toutefois, parmi les 84\% seulement 40\% y croient "tout à fait", les autres déclarent "plutôt" y
+croire (44\%). 
+
+Cependant, Seulement 31\% des Français sont convaincus que le réchauffement climatique est
+scientifiquement prouvé.
+
+
+La plupart des Français considèrent  que les conséquences des activités humaines
+sur le réchauffement climatique sont minorées (49\%) ou exagérées (33\%). Ces résultats
+démontrent qu'il existe des doutes sur la crédibilité des scientifiques sur le
+sujet. 
+
+
+En relation a la prise de mesures pour résoudre le problème au niveau mondial 
+Seulement 56\% des Français pensent que des mesures seront
+prises dans  les prochaines années  pour freiner le réchauffement  climatique.
+
 \subsection{Les entreprises}
-\subsection{Les économistes} 
+
+Les entreprises européens jugent que la politique  de  lutte  contre  le
+changement climatique de l'UE les nuisent, et alors affect sa position concurrentielle dans l'économie
+mondiale. Ils  ont, plusieurs  fois , critiqué  la stratégie  "unilatérale" (une
+solution seulement européenne )en
+soulignant la nécessité de solutions globales.
+
+Par  exemple, en  2009  plusieurs fédérations  professionnelles  comme UNICE  et
+Eurochambres, ainsi que le Conseil  européen de l'industrie chimique (CEFIC) ont
+critiqué le caractère  unilatéral des objectifs de réduction  d'émissions de CO2
+en  disant que  les  objectifs de  réduction  étions trop  élevés,  et comme  il
+existait des grand  pays pollueurs qui ne feraient pas  cette réduction, et cela
+affaiblirait la compétitivité de l'Europe dans le monde sans avoir de véritables effets sur la
+protection de l'environnement.
+
+D'autre part, l'industrie a peur d'une hausse du prix d'énergie renouvelable, et
+cela hausserai  les prix de  toutes les choses.  Pour que cette  prix n'augmente
+pas, une offert d'énergie nucléaire doit être intensifié.
+
+%\subsection{Les économistes} 
 
 
 \section{L’avis du gouvernement}
